@@ -7,5 +7,6 @@ AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a476
 EBUILD reposilite-2.9.16.ebuild 943 BLAKE2B c94284c4bf7d258e247fbedbe2325694ea1b4ea570ee8673cd6b315e00771a752b56bf5edfe6799595cabe59b890467d933f5838d221090df96005abf903c4e0 SHA512 9052c4bb87b3c3551b5263a2528721bcba1e1497a899d9695db7d2fe7e29b8cb97003999026eec433a4f782eb30240fe6966ef6d43a60558651cc4bed24919c8
 EBUILD reposilite-2.9.18.ebuild 943 BLAKE2B bdbf264a337c37ca4d89cb614ab3f7ab4861e1e8f570b9fb89ed64c646ebc495b9359d2e0ed914de39ce6fe45c21927a7dd46abdd354391196187aa19786720f SHA512 f47b038893e66c203e556bc88c78880c81b152c709dd91a977522eadab4ead97491f519fd8aab385e70e216427bf285c186ddae5544e3cbb49ad951fc404a5bf
 EBUILD reposilite-2.9.23.ebuild 943 BLAKE2B f24817bd312b5927121ae085e3fe504faf09f7f3d209079bd64d10421872c64aaf67617c7e0c590a7177236cc9f84b1bffb705525c48e9e3ef28dcd0168c7aef SHA512 f54cebb643a1ca888e8ab17686188a22108369607103e48e6841149d83503a5355d8709db9bc52b25715765342b219eb44d54e724127d3630a2839accec0b5d1
-MISC ChangeLog 1765 BLAKE2B 0a7090c793253b41685136ef8d621de35bf4d372eab583f35b0641ee7d1e42861b781543909a4d69a8f728cbf1f3f231401d10953c745835976add13c3321690 SHA512 6d1342b6bdafb35d8917bc0d28fd1a614535cb214a63092764598f1d26b2c43c54a320da03fe0ef66ffca6645d40f4fd7c4ad0ef0eca19c7f17e7a7bf5bc3ecf
+EBUILD reposilite-2.9.26.ebuild 943 BLAKE2B f24817bd312b5927121ae085e3fe504faf09f7f3d209079bd64d10421872c64aaf67617c7e0c590a7177236cc9f84b1bffb705525c48e9e3ef28dcd0168c7aef SHA512 f54cebb643a1ca888e8ab17686188a22108369607103e48e6841149d83503a5355d8709db9bc52b25715765342b219eb44d54e724127d3630a2839accec0b5d1
+MISC ChangeLog 1919 BLAKE2B 4d70f45a8a5c8b176a44df29a6d90b2be664da93945b1329fe86e7974e9ceb8e315de1013105ea46db043eca7f8de74af2539696dbe8e8f2a0838622fc9a4e43 SHA512 ea417dd8b2491b4e66f85f3acd5a74ab83a2d271f22eb2eeb4e2fda98f4ee16eaa6005fe1ad93d76b76c1fde8c9087f1a51465cc22bfbbd88bbcc0cdea2fa160
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
